<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlace">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPlaceText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etSiteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addPlaceHint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPlaceAddress"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etSiteAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addPlaceAddressHint"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btMakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="makePhoto"
                android:text="@string/addPlaceMakePhoto"
                app:icon="@android:drawable/ic_menu_camera"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btSelectMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectMap"
                android:text="@string/addPlaceSelectMap"
                app:icon="@android:drawable/ic_dialog_map"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/addPlaceRegister" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/addPlaceBack" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>